# Client_v2

./: .gitignore  CMakeLists.txt  README.md  brightnessdialog.cpp  brightnessdialog.h  camerainfo.h  cameraitemwidget.cpp  cameraitemwidget.h  cameraregistrationdialog.cpp  cameraregistrationdialog.h  clickablelabel.h  imageenhancer.cpp  imageenhancer.h  logentry.h  loghistorydialog.cpp  loghistorydialog.h  logitemwidget.cpp  logitemwidget.h  mainwindow.cpp  mainwindow.h  resources.qrc
